More style fixes... small details too small to summarize when we don't have a release yet
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@444 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/core/layout/css/screen.css
+++ b/default_www/backend/core/layout/css/screen.css
@@ -136,6 +136,8 @@ body, html {
 }
 
 body {
+	overflow-x: hidden;
+
 	font-family: "Lucida Grande", Verdana, Arial, sans-serif;
 	line-height: 1.4;
 	color: #666;
@@ -150,13 +152,13 @@ body {
 }
 
 #encloser {
-	width:100%;
+	width: 100%;
 	height: 100%;
 }
 
 #container {
-	width: 100%;
 	height: 100%;
+	padding: 0 24px;
 }
 
 /*
@@ -229,11 +231,12 @@ a:active {
 */
 
 #headerHolder {
-	width: 100%;
+	padding: 0 24px;
 	min-width: 960px;
 	max-width: 1224px;
 	margin: 0 auto;
 	position: relative;
+	
 }
 
 	#headerHolder #header {
@@ -1822,6 +1825,7 @@ fieldset legend {
 	font-weight: 700;
 	border: 1px solid #CCC;
 	margin: 0 0 10px;
+	background: #FFF;
 
 	/* @inc .rc */
 	border-radius: 4px;
@@ -2049,7 +2053,6 @@ abbr.help {
 	margin: 0;
 	padding: 12px 0 0;
 	font-size: 14px;
-
 }
 
 	#headerHolder h1 a {
@@ -2309,8 +2312,6 @@ abbr.help {
 	color: #000;
 	background: url(../images/bullets/bullet-black.gif) no-repeat 0 9px;
 }
-
-
 
 #statusBar {
 	background: #000;
@@ -3321,6 +3322,14 @@ a.mainButton.focus {
 			#pages.addEdit #tabSEO #url {
 				width: 240px;
 			}
+			
+		/*
+			editTemplate
+		*/
+		
+		#pages.editTemplate #path {
+			width: 340px;
+		}
 
 	/*
 		Blog
